--- a/Sicsoft.Checkin.Web/Pages/OfertaVenta/Index.cshtml
+++ b/Sicsoft.Checkin.Web/Pages/OfertaVenta/Index.cshtml
@@ -417,7 +417,7 @@
                                         <a onclick="javascript: Eliminar(@item.id)" title="Eliminar" class="btn btn-rounded btn-outline-danger"> Eliminar</a>
                                         &nbsp;
 
-                                        <a onclick="javascript: onClickModal('@item.id', '')" title="Reenviar" class="btn btn-rounded btn-outline-warning">Reenviar Correo</a>
+                                        <a onclick="javascript: onClickModal('@item.id', '@item.CorreoContacto')" title="Reenviar" class="btn btn-rounded btn-outline-warning">Reenviar Correo</a>
 
                                     </td>
 
