--- a/Sicsoft.Checkin.Web/Pages/OfertaVenta/Observar.cshtml
+++ b/Sicsoft.Checkin.Web/Pages/OfertaVenta/Observar.cshtml
@@ -91,7 +91,27 @@
 
                         </div>
                     </div>
+                    <div class="col-md-4">
+                        <div class="form-group">
+                            <label>Persona Contacto:</label>
+                            <input type="text" class="form-control form-control-lg" id="pContacto" asp-for="Orden.PersonaContacto" readonly>
 
+                        </div>
+                    </div>
+                    <div class="col-md-4">
+                        <div class="form-group">
+                            <label>Teléfono Contacto:</label>
+                            <input type="text" class="form-control form-control-lg" id="tContacto" asp-for="Orden.TelefonoContacto" readonly>
+
+                        </div>
+                    </div>
+                    <div class="col-md-4">
+                        <div class="form-group">
+                            <label>Correo Contacto:</label>
+                            <input type="text" class="form-control form-control-lg" id="emailContacto" asp-for="Orden.CorreoContacto" readonly>
+
+                        </div>
+                    </div>
                     <div class="col-md-4">
                         <div class="form-group">
                             <label>Moneda:</label>
